Revise services page content and structure
Updated the services page with new titles, descriptions, and keywords. Enhanced service descriptions and added certifications.

--- a/services.html
+++ b/services.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services - Reagan Ochola | Data Analytics & MEL Specialist</title>
-  <meta name="description" content="Professional services offered by Reagan Ochola - Data Analytics & MEL Specialist specializing in agricultural data, Power BI dashboards, and quantitative analysis for development organizations.">
-  <meta name="keywords" content="MEL Services, Data Analytics, Agriculture, Power BI, SQL, Consulting, Kenya, East Africa">
+  <title>Services - Reagan Ochola | Strategic MEL Leader (9 yrs) • Power BI • SQL • Python</title>
+  <meta name="description" content="Professional services offered by Reagan Ochola – 9 years designing MEL frameworks for multi-country donor programmes, Power BI + SQL automation, 50+ staff, 15 k+ farmers, 35 % error reduction.">
+  <meta name="keywords" content="MEL Services, Data Analytics, Agriculture, Power BI, SQL, Python, Consulting, Kenya, East Africa, USAID MEL 2024, Google BI 2025, AI-for-MEL 2025">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com " rel="preconnect">
-  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,25 +26,13 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
-  * Updated: Aug 23 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/ 
-  ======================================================== -->
 </head>
 
 <body class="services-page">
 
+  <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
-      <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-      <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -83,118 +71,178 @@
       </div>
 
     </div>
-  </header>
+  </header><!-- /Header -->
 
   <main class="main">
 
-    <!-- Services Section -->
+    <!-- ======= Services Section ======= -->
     <section id="services" class="services section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Comprehensive data analytics and MEL consulting services designed to transform agricultural operations and improve farmer outcomes across East Africa.</p>
+        <p>
+          Strategic MEL leader with <strong>9 years</strong> designing robust frameworks for multi-country donor programmes.
+          Power-BI + SQL automation cut reporting TAT <strong>50 %</strong> and data-processing time <strong>40 %</strong>
+          while managing <strong>50+ MEL officers</strong> across Kenya.
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row justify-content-center g-5">
 
+          <!-- 1  Agricultural Data Analytics  -->
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="100">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-graph-up"></i>
-              </div>
+            <div class="service-item h-100">
+              <div class="service-icon"><i class="bi bi-graph-up"></i></div>
               <div class="service-content">
                 <h3>Agricultural Data Analytics</h3>
-                <p>Transform raw field data into actionable insights that improve farmer outcomes. Comprehensive analysis of crop performance, adoption rates, and program effectiveness using advanced statistical methods and visualization techniques.</p>
+                <p>
+                  Transform raw field data into actionable insights that improve farmer outcomes.
+                  Comprehensive analysis of crop performance, adoption rates & programme effectiveness
+                  using Python, SQL & advanced statistics.
+                </p>
+                <ul>
+                  <li>Crop-yield prediction & trend analysis</li>
+                  <li>Farmer-behaviour segmentation</li>
+                  <li>Programme-impact quantification</li>
+                </ul>
+                <div class="service-tags mt-2">
+                  <span>Python</span><span>SQL</span><span>Advanced Excel</span>
+                </div>
                 <a href="service-details.html" class="service-link">
-                  <span>Learn More</span>
-                  <i class="bi bi-arrow-right"></i>
+                  <span>Learn More</span><i class="bi bi-arrow-right"></i>
                 </a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- /Service Item -->
 
+          <!-- 2  Power BI Dashboard Development  -->
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-speedometer2"></i>
-              </div>
+            <div class="service-item h-100">
+              <div class="service-icon"><i class="bi bi-speedometer2"></i></div>
               <div class="service-content">
                 <h3>Power BI Dashboard Development</h3>
-                <p>Create interactive, real-time dashboards for monitoring farmer performance, crop adoption, and program outcomes. Custom visualization solutions that enable data-driven decision making at all organizational levels.</p>
+                <p>
+                  Create interactive, real-time dashboards for monitoring farmer performance, crop adoption
+                  and programme outcomes.  Cut reporting turnaround <strong>50 %</strong> with automated ETL pipelines.
+                </p>
+                <ul>
+                  <li>Real-time farmer-performance tracking</li>
+                  <li>Repayment-rate & adoption dashboards</li>
+                  <li>Geospatial yield heat-maps</li>
+                </ul>
+                <div class="service-tags mt-2">
+                  <span>Power BI</span><span>DAX</span><span>SQL</span>
+                </div>
                 <a href="service-details.html" class="service-link">
-                  <span>Learn More</span>
-                  <i class="bi bi-arrow-right"></i>
+                  <span>Learn More</span><i class="bi bi-arrow-right"></i>
                 </a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- /Service Item -->
 
+          <!-- 3  MEL Framework Development  -->
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="200">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-clipboard-data"></i>
-              </div>
+            <div class="service-item h-100">
+              <div class="service-icon"><i class="bi bi-clipboard-data"></i></div>
               <div class="service-content">
                 <h3>MEL Framework Development</h3>
-                <p>Design and implement comprehensive Monitoring, Evaluation & Learning frameworks tailored to agricultural programs. Establish quality control systems, data validation processes, and performance indicators that reduce survey errors by up to 35%.</p>
+                <p>
+                  Design & implement comprehensive Monitoring, Evaluation & Learning frameworks
+                  tailored to agricultural programmes.  Establish validation systems that cut
+                  survey errors <strong>35 %</strong> and ensure audit-ready data integrity.
+                </p>
+                <ul>
+                  <li>Theory-of-change & indicator matrices</li>
+                  <li>Data-governance & quality-assurance protocols</li>
+                  <li>Donor-compliant reporting templates</li>
+                </ul>
+                <div class="service-tags mt-2">
+                  <span>USAID MEL</span><span>Theory of Change</span><span>Indicators</span>
+                </div>
                 <a href="service-details.html" class="service-link">
-                  <span>Learn More</span>
-                  <i class="bi bi-arrow-right"></i>
+                  <span>Learn More</span><i class="bi bi-arrow-right"></i>
                 </a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- /Service Item -->
 
+          <!-- 4  Field Data Management  -->
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="200">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-people"></i>
-              </div>
+            <div class="service-item h-100">
+              <div class="service-icon"><i class="bi bi-people"></i></div>
               <div class="service-content">
                 <h3>Field Data Management</h3>
-                <p>Lead large-scale field data collection operations with teams of 50+ staff across diverse agricultural regions. Ensure >95% data accuracy through robust training programs, quality assurance protocols, and real-time monitoring systems.</p>
+                <p>
+                  Lead large-scale field-data collection operations with teams of <strong>50+ staff</strong>
+                  across diverse agricultural regions.  Achieve <strong>&gt;95 % data accuracy</strong> via
+                  CommCare & Kobo Toolbox workflows.
+                </p>
+                <ul>
+                  <li>Enumerator training & back-check systems</li>
+                  <li>Real-time data-quality monitoring</li>
+                  <li>Ethical-data-collection protocols</li>
+                </ul>
+                <div class="service-tags mt-2">
+                  <span>CommCare</span><span>Kobo Toolbox</span><span>Field Ops</span>
+                </div>
                 <a href="service-details.html" class="service-link">
-                  <span>Learn More</span>
-                  <i class="bi bi-arrow-right"></i>
+                  <span>Learn More</span><i class="bi bi-arrow-right"></i>
                 </a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- /Service Item -->
 
+          <!-- 5  Quantitative Research & Analysis  -->
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="300">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-calculator"></i>
-              </div>
+            <div class="service-item h-100">
+              <div class="service-icon"><i class="bi bi-calculator"></i></div>
               <div class="service-content">
                 <h3>Quantitative Research & Analysis</h3>
-                <p>Conduct comprehensive quantitative analysis of agricultural data, including MSME manufacturing studies, employment patterns, and training effectiveness assessments. Expertise in statistical analysis using Python, SQL, and advanced Excel.</p>
+                <p>
+                  Conduct comprehensive quantitative analysis of agricultural data—employment patterns,
+                  training effectiveness, gender equity.  Expertise in Python, SQL & advanced Excel.
+                </p>
+                <ul>
+                  <li>MSME manufacturing case studies</li>
+                  <li>Training-impact & efficiency analysis</li>
+                  <li>Gender-equity & segmentation studies</li>
+                </ul>
+                <div class="service-tags mt-2">
+                  <span>Python</span><span>SQL</span><span>SPSS</span>
+                </div>
                 <a href="service-details.html" class="service-link">
-                  <span>Learn More</span>
-                  <i class="bi bi-arrow-right"></i>
+                  <span>Learn More</span><i class="bi bi-arrow-right"></i>
                 </a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- /Service Item -->
 
+          <!-- 6  Training & Capacity Building  -->
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-mortarboard"></i>
-              </div>
+            <div class="service-item h-100">
+              <div class="service-icon"><i class="bi bi-mortarboard"></i></div>
               <div class="service-content">
                 <h3>Training & Capacity Building</h3>
-                <p>Mentor teams on advanced data tools including Power BI, SQL, and Excel for sustainable data-driven decision making. Build internal capacity for MEL operations, dashboard interpretation, and agricultural data analysis techniques.</p>
+                <p>
+                  Mentor teams on Power BI, SQL, Python and ethical data management for
+                  sustainable data-driven decision making.  Build internal MEL capacity.
+                </p>
+                <ul>
+                  <li>Power BI & dashboard-interpreter workshops</li>
+                  <li>SQL for agricultural analysts</li>
+                  <li>Ethical-data-collection certification</li>
+                </ul>
+                <div class="service-tags mt-2">
+                  <span>Training</span><span>Capacity Building</span><span>Mentoring</span>
+                </div>
                 <a href="service-details.html" class="service-link">
-                  <span>Learn More</span>
-                  <i class="bi bi-arrow-right"></i>
+                  <span>Learn More</span><i class="bi bi-arrow-right"></i>
                 </a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- /Service Item -->
 
         </div>
 
@@ -204,36 +252,29 @@
 
   </main>
 
+  <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-
     <div class="container">
-      <div class="copyright text-center ">
+      <div class="copyright text-center">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/  -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+        Certifications: USAID MEL 2024 · Google BI 2025 · AI-for-MEL 2025 · Microsoft Data Analysis 2025 · BCG Forage 2025<br>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
+  </footer><!-- /Footer -->
 
-  </footer>
-
-  <!-- Scroll Top -->
+  <!-- Scroll-Top & JS -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -244,10 +285,7 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
