Update location details in resume
Removed 'Rwanda, Tanzania' from the location details.

--- a/resume.html
+++ b/resume.html
@@ -148,7 +148,7 @@
 
                 <article>
                   <h4>MEL Team Lead – One Acre Fund</h4>
-                  <h5>Jan 2023 – Present  |  Mt. Kenya Region (Kenya, Rwanda, Tanzania)</h5>
+                  <h5>Jan 2023 – Present  |  Mt. Kenya Region</h5>
                   <ul>
                     <li>Designed & maintained interactive <strong>Power BI dashboards</strong> that consolidated complex regional data, cutting reporting turnaround <strong>50 %</strong> and boosting data quality for programme decisions.</li>
                     <li>Integrated <strong>SQL + Power BI</strong> for real-time agricultural performance analytics, reducing data-processing time <strong>40 %</strong> and powering adaptive management across 3 countries.</li>
