--- a/portfolio.html
+++ b/portfolio.html
@@ -255,7 +255,7 @@
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        Certifications: USAID MEL 2024 · Google BI 2025 · AI-for-MEL 2025<br>
+        Certifications: Google BI 2025 · AI-for-MEL 2025<br>
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
