--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/Reagan_Picture.jpg" alt="Reagan Ochola" class="img-fluid rounded-circle" style="max-width: 200px;">
+              <img src="assets/img/profile/Reagan_Picture.jpg" alt="Reagan Ochola" class="img-fluid rounded-circle" style="max-width: 200px;" loading="lazy">
             </figure>
           </div>
         </div>
@@ -114,4 +114,7 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/glightbox/js/g
