--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
           </div>
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/Reagan_Picture.jpg" alt="Reagan Ochola" class="img-fluid rounded-circle" style="max-width: 200px;">
+              <img src="assets/img/profile/Reagan_Picture.jpg" alt="Reagan Ochola" class="img-fluid rounded-circle" style="max-width: 200px;" loading="lazy">
             </figure>
           </div>
         </div>
@@ -121,4 +121,14 @@
                 <h3>Capacity Building</h3>
                 <p>Mentoring teams and building sustainable capacity for data-driven decision making.</p>
               </div>
-            </div
+            </div>
+          </div>
+        </div>
+        <!-- End Skills Grid -->
+      </div>
+    </section><!-- /About Section -->
+  </main>
+
+  <footer id="footer" class="footer">
+    <div class="container">
+      <div class="
