--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
         <p>
           9 years designing MEL frameworks for multi-country donor programmes.
           Power-BI + SQL automation cut reporting TAT <strong>50 %</strong> and data-processing time <strong>40 %</strong>
-          while managing <strong>50+ MEL officers</strong> across Kenya, Rwanda & Tanzania.
+          while managing <strong>50+ MEL officers</strong> across Kenya.
         </p>
       </div><!-- End Section Title -->
 
