--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/Reagan_Picture.jpg" alt="Reagan Ochola" class="img-fluid rounded-circle" style="max-width: 200px;" loading="lazy">
+              <!-- Image removed for faster loading -->
             </figure>
           </div>
         </div>
@@ -117,4 +117,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/glightbox/js/g
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script
