--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
           </div>
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/Reagan_Picture.jpg" alt="Reagan Ochola" class="img-fluid rounded-circle" style="max-width: 200px;" loading="lazy">
+              <!-- Image removed for faster loading -->
             </figure>
           </div>
         </div>
@@ -131,4 +131,7 @@
 
   <footer id="footer" class="footer">
     <div class="container">
-      <div class="
+      <div class="copyright text-center">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
+      </div>
+      <div class="social-links d-flex justify-content-center">
