--- a/index.html
+++ b/index.html
@@ -48,23 +48,6 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -108,19 +91,19 @@
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="hero-image" data-aos="zoom-in" data-aos-delay="300">
               <div class="image-wrapper">
-                <img src="assets/img/profile/profile-square-11.webp" alt="Reagan Ochola" class="img-fluid">
+                <img src="assets/img/profile/Reagan_Profile.webp" alt="Reagan Ochola" class="img-fluid">
                 <div class="floating-elements">
                   <div class="floating-card design" data-aos="fade-left" data-aos-delay="700">
                     <i class="bi bi-palette"></i>
-                    <span>Design</span>
+                    <span>Visualization</span>
                   </div>
                   <div class="floating-card code" data-aos="fade-right" data-aos-delay="800">
                     <i class="bi bi-code-slash"></i>
-                    <span>Code</span>
+                    <span>Analytics</span>
                   </div>
                   <div class="floating-card creativity" data-aos="fade-up" data-aos-delay="900">
                     <i class="bi bi-lightbulb"></i>
-                    <span>Ideas</span>
+                    <span>Insights</span>
                   </div>
                 </div>
               </div>
