--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
         <p data-aos="fade-up" data-aos-delay="400">
           Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability. Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations.
         </p>
-        <div class="hero-actions mt-4" data-aos="fade-up" data-aos-delay="500">
+
+        <!-- Centered Buttons -->
+        <div class="hero-actions d-flex justify-content-center gap-3 mt-4" data-aos="fade-up" data-aos-delay="500">
           <a href="portfolio.html" class="btn btn-primary">View My Work</a>
           <a href="contact.html" class="btn btn-outline">Get In Touch</a>
         </div>
+
+        <!-- Social Links -->
         <div class="social-links mt-4" data-aos="fade-up" data-aos-delay="600">
           <a href="#"><i class="bi bi-twitter"></i></a>
           <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" target="_blank"><i class="bi bi-linkedin"></i></a>
