--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
           Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
         </p>
 
-        <div class="cta-group mt-4">
+        <div class="mt-4 d-flex justify-content-center gap-3">
           <a href="portfolio.html" class="btn btn-primary">View My Work</a>
           <a href="resume.html" class="btn btn-outline">Download Resume</a>
         </div>
