--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2 class="headline">Hi, I'm Reagan - transforming complex agricultural data into evidence-based insights across East Africa</h2>
+        <h2 class="headline">Hi, I'm <span class="text-primary">Reagan Ochola</span> - transforming complex agricultural data into evidence-based insights across East Africa</h2>
         <p class="lead">
           Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
         </p>
@@ -98,6 +98,6 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/js/main.js"></script>
-
 </body>
 </html>
+
