--- a/about.html
+++ b/about.html
@@ -93,9 +93,7 @@
                 <a href="#portfolio" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
-                <a href="#" class="link-underline">
-                  Download Resume <i class="bi bi-download"></i>
-                </a>
+                <a href="assets/files/resume.pdf" class="btn btn-outline" download="Reagan_Ochola_Resume.pdf">Download Resume</a>
               </div>
             </div>
           </div>
