--- a/about.html
+++ b/about.html
@@ -96,6 +96,32 @@
       </div>
     </section><!-- End Skills Section -->
 
+    <!-- ======= Stats Section ======= -->
+    <section id="stats" class="stats section dark-background text-center">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+            <h2>
+              <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>+
+            </h2>
+            <p>Years MEL Experience</p>
+          </div>
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="400">
+            <h2>
+              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>+
+            </h2>
+            <p>MEL Officers Supervised</p>
+          </div>
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
+            <h2>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+            </h2>
+            <p>Countries Covered</p>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Stats Section -->
+
     <!-- ======= Quote Section ======= -->
     <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
       <p>"Building robust data systems that transform complex agricultural information into evidence-based decisions for sustainable development impact."</p>
@@ -121,6 +147,7 @@
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
