--- a/about.html
+++ b/about.html
@@ -1,154 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
-  <meta name="description" content="About Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
-  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, About, Reagan Ochola">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Raleway:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-
-  <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-</head>
-
-<body class="about-page">
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center light-background sticky-top">
-    <div class="container position-relative d-flex align-items-center justify-content-between">
-      <nav id="navmenu" class="navmenu">
-        <ul class="d-flex justify-content-center w-100">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-    </div>
-  </header><!-- End Header -->
-
-  <main class="main text-center">
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Strategic MEL Leader | Multi-Country Donor Programs | Power BI • SQL • Python • Data Governance | 9+ Years Experience</p>
-      </div>
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2 class="headline">Hi, I'm <span class="text-primary">Reagan Ochola</span> - transforming complex agricultural data into evidence-based insights across East Africa</h2>
-        <p class="lead">
-          Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
-        </p>
-        <p>
-          Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
-        </p>
-
-        <div class="mt-4 d-flex justify-content-center gap-3">
-          <a href="portfolio.html" class="btn btn-primary">View My Work</a>
-          <a href="assets/files/resume.pdf" class="btn btn-outline" download="Reagan_Ochola_Resume.pdf">Download Resume</a>
-        </div>
-      </div>
-    </section><!-- End About Section -->
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section text-center">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-        <p>MERL & Program Architecture • Data Governance • Power BI • SQL • Python • Tableau • Statistical Analysis • Adaptive Management</p>
-      </div>
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row g-4 justify-content-center">
-          <!-- Example skill -->
-          <div class="col-md-6 col-lg-3">
-            <div class="skill-box">
-              <h3>Power BI</h3>
-              <p>Advanced dashboard design reducing reporting turnaround by 50% with interactive visualizations and real-time data integration.</p>
-              <span class="d-block">95%</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95"></div>
-              </div>
-            </div>
-          </div>
-          <!-- Add other skills here -->
-        </div>
-      </div>
-    </section><!-- End Skills Section -->
-
-    <!-- ======= Stats Section ======= -->
-    <section id="stats" class="stats section dark-background text-center">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row justify-content-center">
-          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-            <h2>
-              <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>+
-            </h2>
-            <p>Years MEL Experience</p>
-          </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="400">
-            <h2>
-              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>+
-            </h2>
-            <p>MEL Officers Supervised</p>
-          </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
-            <h2>
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-            </h2>
-            <p>Countries Covered</p>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Stats Section -->
-
-    <!-- ======= Quote Section ======= -->
-    <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
-      <p>"Building robust data systems that transform complex agricultural information into evidence-based decisions for sustainable development impact."</p>
-    </blockquote>
-
-  </main>
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="container text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved</span></p>
-      <div class="social-links d-flex justify-content-center mt-3">
-        <a href="#"><i class="bi bi-twitter-x"></i></a>
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/js/main.js"></script>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta content="width=device-width, initial-scale=1.0" name="viewport"> <title>About - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title> <meta name="description" content="About Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa."> <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, About, Reagan Ochola"> <!-- Favicons --> <link href="assets/img/favicon.png" rel="icon"> <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> <!-- Fonts --> <link href="https://fonts.googleapis.com" rel="preconnect"> <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Raleway:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> <!-- Vendor CSS Files --> <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"> <link href="assets/vendor/aos/aos.css" rel="stylesheet"> <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"> <!-- Main CSS File --> <link href="assets/css/main.css" rel="stylesheet"> </head> <body class="about-page"> <!-- ======= Header ======= --> <header id="header" class="header d-flex align-items-center light-background sticky-top"> <div class="container position-relative d-flex align-items-center justify-content-between"> <nav id="navmenu" class="navmenu"> <ul class="d-flex justify-content-center w-100"> <li><a href="index.html">Home</a></li> <li><a href="about.html" class="active">About</a></li> <li><a href="resume.html">Resume</a></li> <li><a href="services.html">Services</a></li> <li><a href="portfolio.html">Portfolio</a></li> <li><a href="contact.html">Contact</a></li> </ul> <i class="mobile-nav-toggle d-xl-none bi bi-list"></i> </nav> </div> </header><!-- End Header --> <main class="main text-center"> <!-- ======= About Section ======= --> <section id="about" class="about section"> <div class="container section-title" data-aos="fade-up"> <h2>About</h2> <p>Strategic MEL Leader | Multi-Country Donor Programs | Power BI • SQL • Python • Data Governance | 9+ Years Experience</p> </div> <div class="container" data-aos="fade-up" data-aos-delay="100"> <h2 class="headline">Hi, I'm <span class="text-primary">Reagan Ochola</span> - transforming complex agricultural data into evidence-based insights across East Africa</h2> <p class="lead"> Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability. </p> <p> Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information. </p> <div class="mt-4 d-flex justify-content-center gap-3"> <a href="portfolio.html" class="btn btn-primary">View My Work</a> <a href="assets/files/resume.pdf" class="btn btn-outline" download="Reagan_Ochola_Resume.pdf">Download Resume</a> </div> </div> </section><!-- End About Section --> <!-- ======= Skills Section ======= --> <section id="skills" class="skills section text-center"> <div class="container section-title" data-aos="fade-up"> <h2>Skills</h2> <p>MERL & Program Architecture • Data Governance • Power BI • SQL • Python • Tableau • Statistical Analysis • Adaptive Management</p> </div> <div class="container" data-aos="fade-up" data-aos-delay="100"> <div class="row g-4 justify-content-center"> <!-- Example skill --> <div class="col-md-6 col-lg-3"> <div class="skill-box"> <h3>Power BI</h3> <p>Advanced dashboard design reducing reporting turnaround by 50% with interactive visualizations and real-time data integration.</p> <span class="d-block">95%</span> <div class="progress"> <div class="progress-bar" role="progressbar" aria-valuenow="95"></div> </div> </div> </div> <!-- Add other skills here --> </div> </div> </section><!-- End Skills Section --> <!-- ======= Quote Section ======= --> <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200"> <p>"Building robust data systems that transform complex agricultural information into evidence-based decisions for sustainable development impact."</p> </blockquote> </main> <!-- ======= Footer ======= --> <footer id="footer" class="footer"> <div class="container text-center"> <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved</span></p> <div class="social-links d-flex justify-content-center mt-3"> <a href="#"><i class="bi bi-twitter-x"></i></a> <a href="#"><i class="bi bi-facebook"></i></a> <a href="#"><i class="bi bi-instagram"></i></a> <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a> </div> </div> </footer><!-- End Footer --> <!-- Vendor JS Files --> <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> <script src="assets/vendor/aos/aos.js"></script> <script src="assets/vendor/swiper/swiper-bundle.min.js"></script> <script src="assets/vendor/glightbox/js/glightbox.min.js"></script> <script src="assets/js/main.js"></script> </body> </html>
