--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
   <meta name="description" content="About Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
   <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, About, Reagan Ochola">
 
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com " rel="preconnect">
   <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
@@ -72,12 +76,12 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <!-- Intro + Photo -->
+        <!-- Intro -->
         <div class="row align-items-center justify-content-between gy-5 mb-5">
-          <div class="col-lg-12" data-aos="fade-right" data-aos-delay="150">
+          <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Strategic MEL Leader</span>
-              <h2 class="headline">Hi, I'm Reagan - transforming complex agricultural data into evidence-based insights across East Africa</h2>
+              <h2 class="headline">Hi, I'm Reagan - I transform complex datasets into evidence-based insights across Africa</h2>
               <p class="lead">
                 Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
               </p>
@@ -89,15 +93,14 @@
                 <a href="#portfolio" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
-                <a href="C:\Users\Administrator\Documents\Google BI Cert\FolioOne\FolioOne\assets\files\resume.pdf" class="link-underline">
+                <a href="assets/files/resume.pdf" class="link-underline" download>
                   Download Resume <i class="bi bi-download"></i>
                 </a>
               </div>
             </div>
           </div>
 
-        </div>
-        <!-- End Intro + Photo -->
+        <!-- End Intro -->
 
         <!-- Skills Grid -->
         <div class="mb-5">
@@ -142,7 +145,7 @@
                 <span class="dot"></span>
                 <time>2010-2014</time>
                 <h4>B.Sc. Community Development</h4>
-                <p>Egerton University - Statistics, Research Methods, Agricultural Extension</p>
+                <p>Egerton University - Statistics, Research Methods, Agricultural Extension, Economics</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="180">
@@ -150,7 +153,7 @@
                 <span class="dot"></span>
                 <time>2015-2017</time>
                 <h4>M.Sc. Project Management</h4>
-                <p>JKUAT - Data Analysis, Project Planning, Monitoring & Evaluation</p>
+                <p>JKUAT - Data Analysis, Project Planning, Monitoring & Evaluation, Strategic Management, Consulting</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="240">
@@ -196,13 +199,13 @@
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="200">
             <div class="fact-pill">
               <i class="bi bi-geo-alt"></i>
-              <span>3 Countries</span>
+              <span>5 African Countries</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="240">
             <div class="fact-pill">
               <i class="bi bi-mortarboard"></i>
-              <span>USAID Certified</span>
+              <span>Google BI Certified</span>
             </div>
           </div>
         </div>
@@ -282,19 +285,22 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row align-items-center">
-          <div class="col-lg-12">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          </div>
+
+          <div class="col-lg-8">
             <div class="row counters">
-              <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="300">
+              <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                 <h2><span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>+</h2>
                 <p>Years MEL Experience</p>
               </div>
 
-              <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="400">
+              <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                 <h2><span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>+</h2>
                 <p>MEL Officers Supervised</p>
               </div>
 
-              <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="500">
+              <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
                 <h2><span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span></h2>
                 <p>Countries Covered</p>
               </div>
@@ -337,7 +343,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
-                  <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
@@ -358,7 +364,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
-                  <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
@@ -379,7 +385,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
-                  <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
