--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
                 <a href="assets/files/resume.pdf" class="link-underline" download>
-                  Download Resume <i class="bi bi-download"></i>
+                  Download Resume <i class="bi bi-download"download="Reagan_Ochola_Resume.pdf">Download Resume></i>
                 </a>
               </div>
             </div>
