--- a/about.html
+++ b/about.html
@@ -77,30 +77,30 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <!-- Intro -->
-        <div class="row align-items-center justify-content-between gy-5 mb-5">
-          <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
-            <div class="intro-content">
-              <span class="eyebrow">Strategic MEL Leader</span>
-              <h2 class="headline">Hi, I'm Reagan - I transform complex datasets into evidence-based insights across Africa</h2>
-              <p class="lead">
-                Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
-              </p>
-              <p>
-                Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
-              </p>
+    <div class="row align-items-center justify-content-center gy-5 mb-5">
+      <div class="col-lg-7 text-center" data-aos="fade-right" data-aos-delay="150">
+        <div class="intro-content">
+          <span class="eyebrow">Strategic MEL Leader</span>
+          <h2 class="headline">Hi, I'm Reagan - I transform complex datasets into evidence-based insights across Africa</h2>
+          <p class="lead">
+            Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
+          </p>
+          <p>
+            Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
+          </p>
 
-              <div class="cta-group">
-                <a href="#portfolio" class="btn-ghost">
-                  View My Work <i class="bi bi-arrow-up-right"></i>
-                </a>
-                <a href="assets/files/resume.pdf" class="link-underline" download>
-                  Download Resume <i class="bi bi-download"download="Reagan_Ochola_Resume.pdf"></i>
-                </a>
-              </div>
-            </div>
+          <div class="cta-group">
+            <a href="#portfolio" class="btn-ghost">
+              View My Work <i class="bi bi-arrow-up-right"></i>
+            </a>
+            <a href="assets/files/resume.pdf" class="link-underline" download>
+              Download Resume <i class="bi bi-download"></i>
+            </a>
           </div>
-
-        <!-- End Intro -->
+        </div>
+      </div>
+    </div>
+<!-- End Intro -->
 
         <!-- Skills Grid -->
         <div class="mb-5">
