--- a/index.html
+++ b/index.html
@@ -77,6 +77,113 @@
           <a href="contact.html" class="btn btn-outline">Get In Touch</a>
         </div>
 
+  <main class="main">
+
+    <!-- ======= Starter Section ======= -->
+    <section id="starter-section" class="starter-section section">
+
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Welcome to My Strategic MEL & Data Analytics Hub</h2>
+        <p>
+          Strategic MEL leader with <strong>9 years</strong> designing robust frameworks for multi-country donor programmes.
+          Power-BI + SQL automation cut reporting TAT <strong>50 %</strong> and data-processing time <strong>40 %</strong>
+          while managing <strong>50+ MEL officers</strong> across Kenya.
+        </p>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <div class="welcome-content text-center">
+
+              <p class="lead">
+                Thank you for visiting my portfolio! I'm <strong>Reagan Ochola</strong>, a Strategic MEL Leader
+                with <strong>9 years</strong> transforming agricultural data into insights that improve
+                <strong>15 000+ farmer outcomes</strong> across East Africa.
+              </p>
+
+              <p>
+                Based in Nairobi, Kenya, I help agriculture and development organisations optimise operations
+                through data-driven decision making.  My expertise bridges complex agricultural data and
+                practical, actionable intelligence.
+              </p>
+
+              <!-- 3-Column Feature Grid -->
+              <div class="row mt-4">
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                  <div class="feature-box">
+                    <i class="bi bi-graph-up text-primary fs-1"></i>
+                    <h5>Data Analytics</h5>
+                    <p>Cut survey errors <strong>35 %</strong> and transform raw field data into actionable insights</p>
+                  </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+                  <div class="feature-box">
+                    <i class="bi bi-speedometer2 text-primary fs-1"></i>
+                    <h5>Power BI Dashboards</h5>
+                    <p>Real-time monitoring solutions that reduce reporting TAT <strong>50 %</strong></p>
+                  </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                  <div class="feature-box">
+                    <i class="bi bi-clipboard-data text-primary fs-1"></i>
+                    <h5>MEL Frameworks</h5>
+                    <p>Donor-compliant frameworks managing <strong>50+ staff</strong> across multiple counties</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- CTA Button Row -->
+              <div class="mt-5" data-aos="fade-up" data-aos-delay="400">
+                <h4>Ready to Explore?</h4>
+                <p>Navigate through my portfolio to learn more about my experience, services, and successful projects:</p>
+                <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                  <a href="about.html" class="btn btn-outline-primary">About Me</a>
+                  <a href="resume.html" class="btn btn-outline-primary">My Resume</a>
+                  <a href="services.html" class="btn btn-outline-primary">Services</a>
+                  <a href="portfolio.html" class="btn btn-outline-primary">Portfolio</a>
+                  <a href="contact.html" class="btn btn-primary">Get In Touch</a>
+                </div>
+              </div>
+
+              <!-- Featured Projects Cards -->
+              <div class="mt-5" data-aos="fade-up" data-aos-delay="500">
+                <h4>Featured Projects</h4>
+                <div class="row g-3">
+                  <div class="col-md-6">
+                    <div class="card h-100">
+                      <div class="card-body">
+                        <h6 class="card-title">Kenya MSME Manufacturing Analysis</h6>
+                        <p class="card-text">5 016 firms, 11 277 jobs, 39.8 % female-owned employment</p>
+                        <a href="portfolio-details.html" class="btn btn-sm btn-primary">View Details</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card h-100">
+                      <div class="card-body">
+                        <h6 class="card-title">East Africa Maize Yield Dashboard</h6>
+                        <p class="card-text">Interactive Power BI dashboard for 18 000+ farmers</p>
+                        <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" target="_blank" class="btn btn-sm btn-outline-primary">
+                          <i class="bi bi-github"></i> View Code
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /Starter Section -->
+
+  </main>
+       
         <!-- Social Links -->
         <div class="social-links mt-4" data-aos="fade-up" data-aos-delay="600">
           <a href="#"><i class="bi bi-twitter"></i></a>
