--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,7 @@
   <meta name="description" content="Contact Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
   <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Contact, Reagan Ochola, Consulting">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Fonts -->
+    <!-- Fonts -->
   <link href="https://fonts.googleapis.com " rel="preconnect">
   <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -68,7 +64,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Ready to optimize your MEL systems and transform agricultural data into actionable insights? Let's discuss your multi-country program needs.</p>
+        <p>Ready to optimize your MEL systems and transform data into actionable insights? Let's discuss your program needs.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -97,7 +93,7 @@
                 <div class="content">
                   <h4>Phone</h4>
                   <p>+254 720 821 051</p>
-                  <p>Available Mon-Fri, 8AM-6PM EAT</p>
+                  <p>Available Sun-Fri, 8AM-6PM EAT</p>
                 </div>
               </div>
 
