--- a/portfolio.html
+++ b/portfolio.html
@@ -191,9 +191,9 @@
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        Certifications: Google BI 2025 · AI-for-MEL 2025<br>
+        Certifications: Google BI · AI-for-MEL · Microsoft Data Analysis · BCG Forage<br>
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      </div>>
     </div>
   </footer><!-- /Footer -->
 
