--- a/services.html
+++ b/services.html
@@ -8,10 +8,6 @@
   <meta name="description" content="Professional services offered by Reagan Ochola – 9 years designing MEL frameworks for multi-country donor programmes, Power BI + SQL automation, 50+ staff, 15 k+ farmers, 35 % error reduction.">
   <meta name="keywords" content="MEL Services, Data Analytics, Agriculture, Power BI, SQL, Python, Consulting, Kenya, East Africa, USAID MEL 2024, Google BI 2025, AI-for-MEL 2025">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -248,7 +244,7 @@
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        Certifications: Google BI 2025 · AI-for-MEL 2025 · Microsoft Data Analysis 2025 · BCG Forage 2025<br>
+        Certifications: Google BI · AI-for-MEL · Microsoft Data Analysis · BCG Forage<br>
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
