--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </h1>
         <h2>Welcome to My Strategic MEL & Data Analytics Hub</h2>
         <p data-aos="fade-up" data-aos-delay="400">
-          Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability. Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations.
+          Strategic MEL Leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability. Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations.
         </p>
 
         <!-- 3-Column Feature Grid -->
