--- a/about.html
+++ b/about.html
@@ -61,10 +61,9 @@
       <div class="col-lg-7 text-center" data-aos="fade-right" data-aos-delay="150">
         <div class="intro-content">
           <span class="eyebrow">Strategic MEL Leader</span>
-          <h2 class="headline">Hi, I'm Reagan - I transform complex datasets into evidence-based insights across Africa</h2>
+          <h2 class="headline">Transforming complex datasets into evidence-based insights across Africa</h2>
           <p class="lead">
-            Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
-          </p>
+            My work is simple: I make change measurable and sustainable. For nearly a decade, I've led Monitoring, Evaluation, and Learning (MEL) efforts, architecting the systems that track success across multi-country donor-funded initiatives. I don't just collect data; I translate it into the clear, compelling evidence partners need to make smart, strategic pivots and lock in long-term program impact. </p>
           <p>
             Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
           </p>
@@ -146,7 +145,7 @@
                 <span class="dot"></span>
                 <time>2023-Present</time>
                 <h4>MEL Team Lead</h4>
-                <p>One Acre Fund - Regional coverage, reduced reporting turnaround by 50%, enhanced adaptive management across 3 countries</p>
+                <p>One Acre Fund - Regional coverage, reduced reporting turnaround by 50%, enhanced adaptive management across 3 counties</p>
               </article>
             </div>
           </div>
@@ -209,7 +208,7 @@
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
             <div class="skill-box">
               <h3>SQL</h3>
-              <p>Real-time analysis integration reducing data processing time by 40% across multi-country agricultural operations.</p>
+              <p>Real-time analysis integration reducing data processing time by 40% across multi-county agricultural operations.</p>
               <span class="text-end d-block">90%</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
