--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
           <span class="eyebrow">Strategic MEL Leader</span>
           <h2 class="headline">Transforming complex datasets into evidence-based insights across Africa</h2>
           <p class="lead">
-            My work is simple: I make change measurable and sustainable. For nearly a decade, I've led Monitoring, Evaluation, and Learning (MEL) efforts, architecting the systems that track success across multi-country donor-funded initiatives. I don't just collect data; I translate it into the clear, compelling evidence partners need to make smart, strategic pivots and lock in long-term program impact. </p>
+            My work is 'simple': I make change measurable and sustainable. For nearly a decade, I've led Monitoring, Evaluation, and Learning (MEL) efforts, architecting the systems that track success across multi-country donor-funded initiatives. I don't just collect data; I translate it into the clear, compelling evidence partners need to make smart, strategic pivots and lock in long-term program impact. </p>
           <p>
             Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
           </p>
